Fix long lines not wrapping

--- a/simplechat.less
+++ b/simplechat.less
@@ -74,6 +74,8 @@ body {
           &.msg {
             width: 77%;
             float: left;
+            word-wrap: break-word;
+            overflow: hidden;
           }
 
           &.time {
